<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="false"
        app:behavior_peekHeight="48dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:cardCornerRadius="8dp">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_marginStart="12dp"
                  android:layout_marginEnd="12dp"
                  android:layout_marginBottom="12dp">

        <Button android:id="@+id/hintButton"
                android:drawableStart="@drawable/arrow_up"
                android:drawablePadding="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textColor="@android:color/darker_gray"
                android:textAllCaps="false"
                android:text="@string/hint"
                style="@style/Widget.AppCompat.Button.Borderless"/>

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

        <ImageView android:id="@+id/hintImageView"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="12dp"
                   tools:src="@tools:sample/avatars"/>

        <TextView android:id="@+id/answerTextView"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="12dp"
                  android:text="@string/correct_answer"/>

        <TextView android:id="@+id/hintTextView"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="12dp"
                  android:text="@string/hint_example"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>